<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--item android:id="@+id/action_example" android:title="@string/action_example"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" /-->
    <item android:id="@+id/action_connect_instrument" android:title="@string/action_connect_instrument"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_disconnect_instrument" android:title="@string/action_disconnect_instrument"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_connect_server" android:title="@string/action_connect_server"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_disconnect_server" android:title="@string/action_disconnect_server"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
