<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keysight.guozhitao.iisuite.activity.settings.InstrumentSettingsFragment"
    android:baselineAligned="false">

    <!-- TODO: Update blank fragment layout -->

    <ListView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/instrumentListView"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/btn_add_instrument"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/btn_delete_instrument"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify"
            android:id="@+id/btn_modify_instrument"
            android:layout_gravity="center" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synchronize"
                android:id="@+id/btn_synchronize_instrument"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
